--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
 @import url("https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300;400;500;600;700&display=swap");
 
-@import url("https://fonts.googleapis.com/css2?family=Unica+One&display=swap");
-
-@font-face {
-    font-family: GillSans;
-    src: url("./Util/fonts/GillSans-SemiBold.ttf");
-    format: ("ttf");
-    font-display: swap;
-  }
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;400;500;700&display=swap');
